# crewai-account-team

./: .env.example  .gitignore  README.md  pyproject.toml
src/account_team/: crew.py  main.py
src/account_team/config/: .gitignore  agents.yaml  client_details_sample.yaml  tasks.yaml
src/account_team/docs/: process_flow.md
