[tool.poetry]
name = "account_team"
version = "0.1.0"
description = "account_team using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }


[tool.poetry.scripts]
account_team = "account_team.main:run"
run_crew = "account_team.main:run"
train = "account_team.main:train"
replay = "account_team.main:replay"
test = "account_team.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
